fix: say which migration the schema reader passed over
Skipping what it cannot follow is the design, and it is why a schema written in
a dialect nobody anticipated does not break a build. What was missing is the
account of it: an `alter table` naming a table no `create table` had reached
yet, and one whose effect this reader cannot describe — which takes the table
out of the catalog rather than leave a description known to be stale — both
happened in silence.

The consequence surfaces somewhere else entirely, as a column that is not there
and a query blamed for using it. With nothing linking the two, the only way to
find the migration responsible is to bisect the directory by hand, and a
measure taken through the diagnostics is not even monotonic in the input: a
subset missing a table the statement reads skips the check and reads as
success.

A catalog now carries what it passed over, by the table it was about, and the
missing-column complaint says it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>